<resources>
    <string name="app_name">wakafku_dummy</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ornare orci, ac dignissim vitae, rutrum tincidunt amet nunc. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="login_txt">Log in</string>
    <string name="or">Or</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_google">Google</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="login_text_daftar">Daftar</string>
    <string name="login_no_ponsel">No ponsel</string>
    <string name="register_txt">Register</string>
    <string name="register_no_ponsel">No ponsel</string>
    <string name="register_text_daftar">Daftar</string>
    <string name="lupa_pin_buat_kode_pin">Buat Kode Pin</string>
    <string name="lupa_pin_masukan_6_digit_angka">Masukan 6 digit angka</string>
    <string name="lupa_pin_txt_pin">PIN</string>
    <string name="lupa_pin_txt_konfirmasi_pin">Konfirmasi PIN</string>
    <string name="lupa_pin_btn_verifikasi">Verifikasi</string>
    <string name="login_txt_no_ponsel">No ponsel</string>
    <string name="KodeOtp_masukan_kode_otp">Masukan Kode OTP</string>
    <string name="KodeOtp_txt_kami_telah_mengirimkan_kode_otp_pada_ponsel_anda">Kami telah mengirimkan kode OTP pada ponsel anda</string>
    <string name="KodeOtp_nomor_ponsel">081******756</string>
    <string name="KodeOtp_txt_waktu">00:30</string>
    <string name="tidak_mendapat_kode_OTP">Tidak mendapat kode OTP?</string>
    <string name="KodeOtp_text_kirimUlang">Kirim Ulang</string>
    <string name="text_kirim">Kirim</string>
    <string name="InputData_txt_judul">Lengkapi data berikut</string>
    <string name="inputdata_txt_namalengkap">Nama lengkap</string>
    <string name="inputdata_txt_email">Email</string>
    <string name="inputdata_txt_password">Password</string>
    <string name="pin_txt_judul">Buat PIN</string>
    <string name="text_simpan">Simpan</string>
    <string name="txt_masukan_pin">Masukan PIN</string>
    <string name="txt_lupa_pin">Lupa Pin?</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_0">0</string>
    <string name="txt_masukan_no_ponsel">Masukan No Ponsel</string>
    <string name="txt_masukan_no_ponsel_anda_untuk_mendapatkan_kode_otp">Masukan no ponsel anda untuk mendapatkan kode OTP</string>
</resources>