<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".InputNoPonselActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/txt_masukan_no_ponsel"
        android:layout_marginTop="124dp"
        android:textAlignment="center"
        android:textFontWeight="600"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textFontWeight="400"
        android:text="@string/txt_masukan_no_ponsel_anda_untuk_mendapatkan_kode_otp"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_nomor_ponsel_lupapin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/button_gray"
        android:hint="@string/login_txt_no_ponsel"
        android:inputType="number|phone"
        android:maxLength="14"
        android:layout_marginTop="42dp"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/input_noponsel_btn_action_lupapin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/text_kirim"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>