<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".PinActivity">

    <TextView
        android:id="@+id/pin_txt_judul"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:text="@string/pin_txt_judul"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="20sp"
        tools:ignore="UnusedAttribute" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Pin_edttext_pin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/button_gray"
        android:hint="@string/lupa_pin_txt_pin"
        android:inputType="number|phone"
        android:maxLength="6"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Pin_edttext_konfirmasipin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_gray"
        android:hint="@string/lupa_pin_txt_konfirmasi_pin"
        android:inputType="number|phone"
        android:maxLength="6"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/Pin_btn_actionsimpan"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button"
        android:text="@string/text_simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>